# code-snippets

./: .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  README.md  code-snippets.code-workspace
antlr4-parser/: .mise.toml  JSON.g4  README.md  justfile  pyproject.toml
custom-rule-engine/: justfile  pom.xml
docker-compose/: spark-clickhouse-minio.docker-compose.yml
drools-rule-engine/: .mise.toml  README.md  justfile  pom.xml
jepsen-etcd/: .gitignore  .mise.toml  README.md  justfile  project.clj
k8s-rancher/: .mise.toml  README.md  justfile
kubers-ingress-operator/: .mise.toml  README.md  justfile
nft/: README.md  foundry.toml
pgrx-data-retention/: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  pgrx_data_retention.control
pgrx-replication-kafka/: justfile
pgwire-pglite/: .mise.toml  README.md  index.ts  justfile  package.json
postgres-stream-using-watermark-table/: .mise.toml  Cargo.toml  README.md  justfile
postgres-stream-using-watermark-table/docker/: docker-compose.yaml
postgres-stream-using-watermark-table/docker/postgres-init/: init.sql
postgres-stream-using-watermark-table/migrations/2025-07-09-234549_watermark_table/: down.sql  up.sql
postgres-stream-using-watermark-table/src/: db.rs  kafka.rs  main.rs  mod.rs
pyspark-s3-batch-clickhouse/: README.md  (+6 more)
rs-libp2p/: Cargo.toml  README.md
rs-libp2p/src/: main.rs
rs-s3-duckdb/: .env.example  .gitignore  .mise.toml  Cargo.toml  README.md  justfile
rs-s3-duckdb/src/: duckdb_service.rs  file_parser_service.rs  json_writer.rs  main.rs  mod.rs  s3_service.rs
(+217 files in other folders)
