[package]
name = "postgres-stream-using-watermark-table"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
diesel = { version = "2.2.0", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
rdkafka = { version = "0.25", features = ["tokio"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full", "macros"] }
tokio-postgres = { version = "0.7.13" }
bytes = "1.5.0"
