[package]
name = "rs-libp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["noise", "tcp", "ping", "tokio", "yamux"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

