[package]
name = "rs-s3-duckdb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
aws-smithy-types = "0.55.3"
futures = "0.3"
anyhow = "1.0"
url = "2.3"
lz4 = "1.24"
bytes = "1.3"
rmp = "0.8"
rmpv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.3.1", features = ["bundled"] }
log = "0.4.27"
env_logger = "0.10.2"
